--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+title: A Beginner's Guide to Variational Inference
+description: |
+  Social Statistics Group Meetings. 
+  London School of Economics and Political Science, 1 February 2018.
